# ais_competition

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  mestr_example.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_competition.py  setup.py
competition_data/: submission_template.csv  test_data.csv  test_labels.csv  train_data.csv
config/: competition_config.yaml  config.yaml  ensemble_config.yaml  model_configs.yaml  traisformer_config.yaml
mestr_checkpoints/: training_results.json
scripts/: demo.py  predict.py  submit.py  train.py
src/: __init__.py
src/data_generation/: synthetic_data_generator.py
src/features/: feature_engineering.py
src/models/: base_model.py  clustering_model.py  ensemble_model.py  traisformer.py
src/training/: __init__.py  train_ensemble.py  train_traisformer.py  trainer.py  validator.py
src/utils/: logging_utils.py  metrics.py  visualization.py
src/visualization/: analysis_plots.py
tests/: __init__.py  test_models.py
